--- a/package.json
+++ b/package.json
@@ -9,24 +9,30 @@
     "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
+    "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^0.27.2",
     "element-plus": "^2.1.11",
     "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.13",
     "vue": "^3.2.25",
     "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.3.1",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "less": "^4.1.2",
     "path": "^0.12.7",
     "prettier": "^2.6.2",
     "typescript": "^4.5.4",
     "url": "^0.11.0",
     "vite": "^2.9.5",
+    "vite-svg-loader": "^3.3.0",
     "vue-tsc": "^0.34.7"
   }
 }
