--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "@vueuse/core": "^8.4.1",
     "@vueuse/motion": "^2.0.0-beta.12",
     "axios": "^0.27.2",
+    "echarts": "^5.3.2",
     "element-plus": "^2.1.11",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
